--- a/analytics-dashboard/vercel.json
+++ b/analytics-dashboard/vercel.json
@@ -5,6 +5,10 @@
         "dest": "/analytics-dashboard/index.html"
       },
       {
+        "src": "/analytics-dashboard",
+        "dest": "/analytics-dashboard/index.html"
+      },
+      {
         "src": "/(.*)",
         "dest": "/index.html"
       }
